# car_crawling

./: .gitignore  README.md  car_detail_extractor.py  carku_crawling.py  config.py  data_processor.py  driver_setup.py  encar_crawling.py  main.py  opensearch_handler.py  pagination_handler.py  pyproject.toml  requirements.txt  run.py
carku/: carku_crawling.py  carku_crawling_sel.py
