[project]
name = "car_crawling_project"
version = "0.1.0"
dependencies = [
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "attrs==25.1.0",
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "events==0.5",
    "frozenlist==1.5.0",
    "idna==3.10",
    "multidict==6.1.0",
    "opensearch-py==2.8.0",
    "propcache==0.3.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "six==1.17.0",
    "soupsieve==2.6",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "yarl==1.18.3",
]

